# lattice-levy-qmc

./: .gitignore  .qmc_systematic_tmp.py  README.md  benchmark_random_seam_stitch.py  compare_40_site_energy.py  demo.py  demo_interacting.py  interacting_ed_validation.txt  interacting_lattice_levy.py  lattice_levy.py  test_interacting_lattice_levy.py  test_results_all.txt  validate_interacting_ed.py
cpp/: .clang-format  .clang-tidy  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  REFACTORING_FINDINGS.md
cpp/cmake/: QmcTooling.cmake
cpp/examples/: CMakeLists.txt  continuation_bundle.cpp  continuation_bundle.hpp  expect_exit.cmake  ideal_demo.cpp  interacting_demo.cpp  verify_continuation_bundle.cmake  verify_observable_outputs.cmake
cpp/include/qmc/: configuration.hpp  continuous_configuration.hpp  continuous_observables.hpp  free_boson.hpp  free_numerics.hpp  ideal.hpp  imaginary_time_lags.hpp  interacting.hpp  interacting_model.hpp  interacting_sampler.hpp  interaction.hpp  matsubara_modes.hpp  model.hpp  observables.hpp  path.hpp  permutation.hpp  random.hpp  torus_layout.hpp  version.hpp.in
cpp/src/: accepted_chain_state.cpp  accepted_chain_state.hpp  adaptive_discrete_support.hpp  canonical_observables.cpp  canonical_recursion.cpp  canonical_recursion.hpp  checked_math.hpp  configuration.cpp  continuous_configuration.cpp  continuous_detail.hpp  continuous_event_sweep.cpp  continuous_event_sweep.hpp  continuous_matsubara_detail.hpp  continuous_observables.cpp  free_boson.cpp  free_numerics.cpp  imaginary_time_lags.cpp  interacting_model.cpp  interacting_sampler.cpp  interaction.cpp  interaction_detail.hpp  lattice_transform_detail.hpp  lattice_transforms.cpp  matsubara_modes.cpp  model.cpp  observables.cpp  occupancy_index.cpp  occupancy_index.hpp  path.cpp  path_cursor.cpp  path_cursor.hpp  permutation.cpp  random.cpp  retained_observables.cpp  stitch_matching.cpp  stitch_matching.hpp  stitch_proposal.cpp  stitch_proposal.hpp  stitch_seam_context.cpp  stitch_seam_context.hpp  (+4 more)
cpp/tests/: CMakeLists.txt  continuous_test_fixtures.hpp  scaffold_test.cpp  test_adaptive_discrete_support.cpp  test_canonical_recursion.cpp  test_configuration.cpp  test_continuation_bundle.cpp  test_continuous_configuration.cpp  test_continuous_observables.cpp  test_free_boson.cpp  test_free_numerics.cpp  test_imaginary_time_lags.cpp  test_interacting_sampler.cpp  test_interacting_statistical.cpp  test_interaction.cpp  test_matsubara_modes.cpp  test_model.cpp  test_observables.cpp  test_occupancy_index.cpp  test_path.cpp  test_random.cpp  test_sampling_statistical.cpp  test_stitch_proposal.cpp  test_torus_layout.cpp  test_version.cpp
docs/: ANALYTIC_CONTINUATION_DATA.md  ARCHITECTURE.md  CONTINUOUS_TIME_MEASUREMENTS.md  CPP_PORT.md  MAXENT.md  MEASUREMENTS.md  RANDOM_SEAM_STITCH.md
python/: demo_interacting.py  interacting_lattice_levy.py  qmc_dynamic_structure.py  qmc_maxent.py  test_interacting_lattice_levy.py  test_lattice_levy.py  test_qmc_maxent.py
